--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "express": "^4.21.2",
     "mongoose": "^8.9.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
